--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.btn-del {
+  background-color: #ff6c60;
+  border-color: #ff6c60;
+  color: #FFFFFF;
+}
